<resources>
    <string name="About">About</string>
    <string name="ImplementationVersion">6897</string>
    <string name="SpecificationVersion">1.0</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_neo_body1">- NeoSpectra sensors are low cost, miniaturized, OEM spectral sensors, that are based on Micro Electro Mechanical Systems (MEMS) technology. Spectral sensors read input light and generate the corresponding spectral response with different wide Near InfraRed (NIR) spectral ranges between 1,150 nm and 2,500 nm.</string>
    <string name="about_neo_body2">- NeoSpectra’s unique features can enable new usage models for material composition analysis and identification in wide range of applications areas.</string>
    <string name="about_siware">About Si-Ware</string>
    <string name="about_us_body1">Si-Ware Systems (SWS) is a fabless semiconductor company that is fostering silicon innovation. SWS capitalized on its Optical MEMS Technology IP to develop a unique Optical MEMS platform – Silicon integrated Micro Optical Systems Technology (SiMOST™), that allows the creation of multiple optical components on silicon chips. Si-Ware Systems’ (SWS) innovative SiMOST™ platform as well as expertise in Application Specific Integrated Circuits (ASICs) design and development are the main enablers of NeoSpectra.</string>
    <string name="action_settings">Search Bluetooth Devices</string>
    <string name="app_name">NS-Scanner</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="ask_every_time">Ask me every time</string>
    <string name="ask_to_delete_item">Are you sure you want to delete this record?</string>
    <string name="base64encoded">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEArUEMm8Fhqx9kbIbRKFzARL6eWPo0l4Pjttn7kZkEscf7T3Tgj23SlFAInhlq65KZ06j6MJ4vgZK62KajxEu1vo41fVfhSMpVMTmccy9yKcN8SJ1+32ZO2IBrL7wWsxkW1iTlfUXNKqNzfn7sa/+QsY2V2vxeze+bynRMpIKhRPh5eM36fjWFOGbJUqhUY4eYSy/idjio8LtATN4X5ZlGDusx+a8Q09zJHVYtGtewkoQNZ4QCth9jAGVPU/KtFcCmPlWxXAytBi9awXRz7sDmpu8st5IG8YtJL+kdkm/W1AMj16lskQWwJ/n7rgZbTj/roJmKEDCwx6ghm4osGU0rmwIDAQAB</string>
    <string name="bb_iv_tag">bb_tag_icon</string>
    <string name="bb_tv_tag">bb_tag_name</string>
    <string name="beef">Beef</string>
    <string name="bluetooth_found_devices">Found Devices…</string>
    <string name="bluetooth_scan">Searching for NeoSpectra Scanners</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="buy">Buy</string>
    <string name="buy_module">Buy Modules</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="clear">Clear All</string>
    <string name="clear_history">Clear History</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="connect">Connect</string>
    <string name="default_web_client_id">35600846786-0674k19rgid7q6pe794t4enbp4k0hj4m.apps.googleusercontent.com</string>
    <string name="define_roundedimageview" />
    <string name="desc_module_icon">Description Icon</string>
    <string name="disconnect">Connected</string>
    <string name="dont_take">Don\'t take image</string>
    <string name="expand_button_title">Advanced</string>
    <string name="export">Export</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="filter">Filter</string>
    <string name="firebase_database_url">https://originalneospectra.firebaseio.com</string>
    <string name="firmware_update">Firmware Update</string>
    <string name="gcm_defaultSenderId">35600846786</string>
    <string name="google_api_key">AIzaSyBL7-Njj-eTsTCLfcCGrEmeiTyINw5WuQ0</string>
    <string name="google_app_id">1:35600846786:android:c330ef84bd47aa7b</string>
    <string name="google_crash_reporting_api_key">AIzaSyBL7-Njj-eTsTCLfcCGrEmeiTyINw5WuQ0</string>
    <string name="google_storage_bucket">originalneospectra.appspot.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="key_Preferences_File">NEO_SPECTRA_DATA_File</string>
    <string name="lactose">Lactose</string>
    <string name="library_roundedimageview_author">Vince Mi</string>
    <string name="library_roundedimageview_authorWebsite">https://github.com/vinc3m1</string>
    <string name="library_roundedimageview_isOpenSource">true</string>
    <string name="library_roundedimageview_libraryDescription">A fast ImageView (and Drawable) that supports rounded corners (and ovals or circles) based on the original example from Romain Guy.</string>
    <string name="library_roundedimageview_libraryName">RoundedImageView</string>
    <string name="library_roundedimageview_libraryVersion">1.3.0</string>
    <string name="library_roundedimageview_libraryWebsite">https://github.com/vinc3m1/RoundedImageView</string>
    <string name="library_roundedimageview_licenseId">apache_2_0</string>
    <string name="library_roundedimageview_repositoryLink">https://github.com/vinc3m1/RoundedImageView.git</string>
    <string name="module_details">Module Details</string>
    <string name="module_name">Bread</string>
    <string name="module_price">$14</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="take_image">Take Images</string>
    <string name="title_fragment_about_neo_spectra">About NeoSpectra</string>
    <string name="tv_des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in ipsum id orci porta dapibus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur aliquet quam id dui posuere blandit. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Nulla quis lorem ut libero malesuada feugiat. Vivamus suscipit tortor eget felis porttitor volutpat. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Nulla porttitor accumsan tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Donec rutrum congue leo eget malesuada. Sed porttitor lectus nibh. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Cras ultricies ligula sed magna dictum porta. Nulla quis lorem ut libero malesuada feugiat. Sed porttitor lectus nibh. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum congue leo eget malesuada. Vivamus suscipit tortor eget felis porttitor volutpat. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Curabitur aliquet quam id dui posuere blandit. Curabitur aliquet quam id dui posuere blandit. Curabitur aliquet quam id dui posuere blandit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula. Pellentesque in ipsum id orci porta dapibus. Cras ultricies ligula sed magna dictum porta. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Pellentesque in ipsum id orci porta dapibus. Sed porttitor lectus nibh. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Donec sollicitudin molestie malesuada. Cras ultricies ligula sed magna dictum porta. Cras ultricies ligula sed magna dictum porta. Donec rutrum congue leo eget malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in ipsum id orci porta dapibus. Donec rutrum congue leo eget malesuada.</string>
</resources>