<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <header android:icon="@drawable/ic_info_black_24dp" android:title="@string/pref_header_general" android:fragment="com.si_ware.neospectra.Activities.ConfigureActivity$GeneralPreferenceFragment"/>
    <header android:icon="@drawable/ic_notifications_black_24dp" android:title="@string/pref_header_notifications" android:fragment="com.si_ware.neospectra.Activities.ConfigureActivity$NotificationPreferenceFragment"/>
    <header android:icon="@drawable/ic_sync_black_24dp" android:title="@string/pref_header_data_sync" android:fragment="com.si_ware.neospectra.Activities.ConfigureActivity$DataSyncPreferenceFragment"/>
</preference-headers>
