<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Headline" android:id="@+id/tv_title_about" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/about_siware" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
        <ImageView android:id="@+id/iv_about_logo" android:layout_width="0dp" android:layout_height="0dp" android:layout_marginTop="8dp" android:scaleType="fitXY" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintDimensionRatio="19:6" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_title_about" app:srcCompat="@drawable/si_ware_logo"/>
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:id="@+id/tv_about_body" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/about_us_body1" android:ems="10" android:textAlignment="viewStart" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/iv_about_logo"/>
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Headline" android:id="@+id/tv_title_noe" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/title_fragment_about_neo_spectra" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_about_body"/>
        <ImageView android:id="@+id/iv_about_neo_logo" android:layout_width="0dp" android:layout_height="0dp" android:layout_marginTop="8dp" android:scaleType="fitXY" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintDimensionRatio="19:6" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_title_noe" app:srcCompat="@drawable/neospectra_bar" style="@style/Widget.AppCompat.Toolbar"/>
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:id="@+id/tv_about_neo_body" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/about_neo_body1" android:ems="10" android:textAlignment="viewStart" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/iv_about_neo_logo"/>
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:id="@+id/tv_about_neo_body2" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/about_neo_body2" android:ems="10" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_about_neo_body"/>
        <ImageView android:id="@+id/imageView2" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="32dp" android:layout_marginBottom="8dp" android:scaleType="fitCenter" android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_about_neo_body2" app:srcCompat="@drawable/ic_chipset"/>
        <ImageView android:id="@+id/imageView3" android:layout_width="0dp" android:layout_height="0dp" android:scaleType="fitCenter" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="@+id/imageView2" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/imageView2" app:layout_constraintTop_toTopOf="@+id/imageView2" app:srcCompat="@drawable/scanning_example"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
