<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout android:id="@+id/constraintLayout2" android:background="@drawable/milk_buy_bg" android:layout_width="0dp" android:layout_height="0dp" app:layout_constraintBottom_toTopOf="@+id/gl4" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0">
        <android.support.constraint.ConstraintLayout android:background="@drawable/transparent_header_up_to_down" android:layout_width="0dp" android:layout_height="0dp" app:layout_constraintBottom_toTopOf="@+id/gl2" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
            <ImageView android:id="@+id/iv_back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:onClick="pressBack" android:layout_marginStart="24dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:srcCompat="@drawable/ic_arrow_back"/>
            <TextView android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" android:textColor="@color/white" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/module_details" android:layout_marginStart="32dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toEndOf="@+id/iv_back" app:layout_constraintTop_toTopOf="0"/>
        </android.support.constraint.ConstraintLayout>
        <android.support.constraint.ConstraintLayout android:background="@drawable/transparent_header_down_to_up" android:layout_width="0dp" android:layout_height="0dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/gl3">
            <ImageView android:id="@+id/iv_module_icon" android:layout_width="40dp" android:layout_height="30dp" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:layout_marginStart="32dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:srcCompat="@drawable/beef_insidemodule"/>
            <TextView android:textColor="@color/white" android:id="@+id/tv_module_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/beef" android:layout_marginStart="16dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toEndOf="@+id/iv_module_icon" app:layout_constraintTop_toTopOf="0" style="@style/Base.TextAppearance.AppCompat.Display1"/>
            <TextView android:textColor="@color/white" android:id="@+id/tv_price" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="20$" android:layout_marginEnd="32dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0" style="@style/Base.TextAppearance.AppCompat.Display1"/>
        </android.support.constraint.ConstraintLayout>
        <android.support.constraint.Guideline android:orientation="horizontal" android:id="@+id/gl3" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.7"/>
        <android.support.constraint.Guideline android:orientation="horizontal" android:id="@+id/gl2" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.42"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.Guideline android:orientation="horizontal" android:id="@+id/gl4" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.37"/>
    <ScrollView android:id="@+id/scrollView2" android:layout_width="0dp" android:layout_height="0dp" app:layout_constraintBottom_toTopOf="@+id/tv_buy_use" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/gl4">
        <TextView android:id="@+id/tv_description" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/tv_des_margin" android:text="@string/tv_des"/>
    </ScrollView>
    <TextView android:textColor="@color/white" android:gravity="center" android:id="@+id/tv_buy_use" android:background="@drawable/bg_buy_button2" android:layout_width="@dimen/btn_buy_width" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="32dp" android:text="@string/buy" android:onClick="tvBuyUse" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/scrollView2" style="@style/Base.TextAppearance.AppCompat.Button"/>
</android.support.constraint.ConstraintLayout>
