<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="horizontal" android:id="@+id/cl_row_buy_module" android:layout_width="match_parent" android:layout_height="@dimen/row_height">
    <ImageView android:id="@+id/iv_module_icon" android:layout_width="50dp" android:layout_height="50dp" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:src="@drawable/coffee_icon" android:layout_marginStart="24dp" android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@+id/linearLayout" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@+id/linearLayout" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginStart="32dp" android:layout_marginEnd="32dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@+id/cl_buy_btn" app:layout_constraintStart_toEndOf="@+id/iv_module_icon" app:layout_constraintTop_toTopOf="0">
        <TextView android:textColor="@color/black" android:id="@+id/tv_module_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/module_name"/>
        <TextView android:textColor="@color/colorPrimary" android:id="@+id/tv_module_price" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/module_price"/>
    </LinearLayout>
    <android.support.constraint.ConstraintLayout android:orientation="horizontal" android:id="@+id/cl_buy_btn" android:background="@drawable/bg_buy_button" android:layout_width="80dp" android:layout_height="25dp" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:layout_marginStart="28dp" android:layout_marginEnd="24dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/linearLayout" app:layout_constraintTop_toTopOf="0">
        <TextView android:textColor="@color/colorPrimary" android:id="@+id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/buy" android:layout_marginEnd="19dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
        <ImageView android:layout_gravity="end" android:id="@+id/iv_buy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:src="@drawable/add_icon" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_alignParentStart="true" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/textView" app:layout_constraintTop_toTopOf="0"/>
    </android.support.constraint.ConstraintLayout>
    <ImageView android:id="@+id/ic_module_paid" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:src="@drawable/my_modules" android:layout_marginEnd="32dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0"/>
    <LinearLayout android:background="@color/black_transparent" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginBottom="1dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0"/>
</android.support.constraint.ConstraintLayout>
